added basic html

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ingest": "node src/ingest.js"
   },
   "engines": {
-    "node": ">=18.18.0"
+    "node": "20.x"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
