asked chatgpt to add an auth api key system ez

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,15 @@ INGEST_SLEEP_MS=100
 # Rate limiting
 RATE_WINDOW_MS=60000
 RATE_MAX=30
+
+# Discord OAuth2
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_REDIRECT_URI=http://localhost:3333/callback
+
+# JWT & Sessions
+JWT_SECRET=change-me
+SESSION_TTL_MS=86400000
+
+# Auth SQLite
+SQLITE_DB_PATH=auth.db
