--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aoi.js/aoi.ai.api",
+  "name": "@aoijs/aoi.ai.api",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -16,9 +16,14 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "better-sqlite3": "^9.4.3",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.3.1",
-    "fastest-levenshtein": "^1.0.16"
+    "fastest-levenshtein": "^1.0.16",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1"
   }
 }
